# fastapi-boilerplate

./: .env.sample  .gitignore  config.py  main.py  pyproject.toml
app/database/: base.py  session.py
app/database/migrations/: env.py
app/database/migrations/versions/: de8690af1432_initialize.py
